--- a/todo.txt
+++ b/todo.txt
@@ -78,7 +78,7 @@ P1 — Messaging UX, search, and productivity (DP)
 
 ## Input / message controls (P1)
 - [ ] Up arrow to edit last message (GHI #600) https://github.com/commetchat/commet/issues/600
-- [ ] “Delete without confirmation” option (GHI #639) https://github.com/commetchat/commet/issues/639
+- [x] “Delete without confirmation” option (GHI #639) https://github.com/commetchat/commet/issues/639
 - [ ] Highlight @room mentions (GHI #592) https://github.com/commetchat/commet/issues/592
 - [ ] Collapse membership/state spam in rooms (GHI #598) https://github.com/commetchat/commet/issues/598
 - [ ] Fix duplicate DM entries after room upgrades (GHI #597) https://github.com/commetchat/commet/issues/597
