--- a/todo.txt
+++ b/todo.txt
@@ -84,7 +84,7 @@ P1 — Messaging UX, search, and productivity (DP)
 - [ ] Fix duplicate DM entries after room upgrades (GHI #597) https://github.com/commetchat/commet/issues/597
 - [ ] Allow custom state events (GHI #589) https://github.com/commetchat/commet/issues/589
 - [ ] Disable auto-playing animated media (GHI #588) https://github.com/commetchat/commet/issues/588
-- [ ] Fix .svg profile picture not showing (GHI #576) https://github.com/commetchat/commet/issues/576
+- [x] Fix .svg profile picture not showing (GHI #576) https://github.com/commetchat/commet/issues/576
 
 ## Polls (P1)
 - [ ] Support polls using MSC3381 (GHI #601) https://github.com/commetchat/commet/issues/601
