--- a/todo.txt
+++ b/todo.txt
@@ -147,7 +147,7 @@ P1/P2 — Platform support, packaging, and distribution
 - [ ] Docker image? (client/container story) (GHI #635) https://github.com/commetchat/commet/issues/635
 
 ## Desktop QoL (P2)
-- [ ] Change language on desktop client (GHI #641) https://github.com/commetchat/commet/issues/641
+- [x] Change language on desktop client (GHI #641) https://github.com/commetchat/commet/issues/641
 - [ ] Minimize to tray (GHI #72) https://github.com/commetchat/commet/issues/72
 - [ ] Use native titlebar on Linux (GHI #392) https://github.com/commetchat/commet/issues/392
 - [x] Store logs to file (GHI #389) https://github.com/commetchat/commet/issues/389
