--- a/todo.txt
+++ b/todo.txt
@@ -82,8 +82,8 @@ P1 — Messaging UX, search, and productivity (DP)
 - [x] Up arrow to edit last message (GHI #600) https://github.com/commetchat/commet/issues/600
 - [x] “Delete without confirmation” option (GHI #639) https://github.com/commetchat/commet/issues/639
 - [x] Highlight @room mentions (GHI #592) https://github.com/commetchat/commet/issues/592
-- [ ] Collapse membership/state spam in rooms (GHI #598) https://github.com/commetchat/commet/issues/598
-- [ ] Fix duplicate DM entries after room upgrades (GHI #597) https://github.com/commetchat/commet/issues/597
+- [x] Collapse membership/state spam in rooms (GHI #598) https://github.com/commetchat/commet/issues/598
+- [x] Fix duplicate DM entries after room upgrades (GHI #597) https://github.com/commetchat/commet/issues/597
 - [x] Allow custom state events (GHI #589) https://github.com/commetchat/commet/issues/589
 - [x] Disable auto-playing animated media (GHI #588) https://github.com/commetchat/commet/issues/588
 - [x] Fix .svg profile picture not showing (GHI #576) https://github.com/commetchat/commet/issues/576
