--- a/todo.txt
+++ b/todo.txt
@@ -170,6 +170,6 @@ P2 — Accessibility, notifications tuning, and calendar
 - [x] Fix links not opening in browser/apps (GHI #637) https://github.com/commetchat/commet/issues/637
 
 ## Calendar (P2)
-- [ ] Fix all-day events saved one day off when updating (GHI #633) https://github.com/commetchat/commet/issues/633
+- [x] Fix all-day events saved one day off when updating (GHI #633) https://github.com/commetchat/commet/issues/633
 - [ ] Calendar-integrated availability / ready-up system (GHI #626) https://github.com/commetchat/commet/issues/626
 - [ ] Incorporate Linux Flatpak feedback (GHI #632) https://github.com/commetchat/commet/issues/632
