--- a/todo.txt
+++ b/todo.txt
@@ -146,7 +146,7 @@ P1/P2 — Platform support, packaging, and distribution
 
 ## Linux packaging + distro ergonomics (P1)
 - [x] Trouble installing .deb on KDE Ubuntu (GHI #684) https://github.com/commetchat/commet/issues/684
-- [ ] Fix .deb landing in filesystem root (GHI #575) https://github.com/commetchat/commet/issues/575
+- [x] Fix .deb landing in filesystem root (GHI #575) https://github.com/commetchat/commet/issues/575
 - [ ] Request AUR package (GHI #357) https://github.com/commetchat/commet/issues/357
 - [ ] Debian ARM64 support (GHI #371) https://github.com/commetchat/commet/issues/371
 - [ ] Add to F-Droid (GHI #115) https://github.com/commetchat/commet/issues/115
@@ -155,7 +155,7 @@ P1/P2 — Platform support, packaging, and distribution
 ## Desktop QoL (P2)
 - [x] Change language on desktop client (GHI #641) https://github.com/commetchat/commet/issues/641
 - [ ] Minimize to tray (GHI #72) https://github.com/commetchat/commet/issues/72
-- [ ] Use native titlebar on Linux (GHI #392) https://github.com/commetchat/commet/issues/392
+- [x] Use native titlebar on Linux (GHI #392) https://github.com/commetchat/commet/issues/392
 - [x] Store logs to file (GHI #389) https://github.com/commetchat/commet/issues/389
 - [x] PWA icon dark variant (Chromebooks) (GHI #398) https://github.com/commetchat/commet/issues/398
 
@@ -172,4 +172,4 @@ P2 — Accessibility, notifications tuning, and calendar
 ## Calendar (P2)
 - [x] Fix all-day events saved one day off when updating (GHI #633) https://github.com/commetchat/commet/issues/633
 - [ ] Calendar-integrated availability / ready-up system (GHI #626) https://github.com/commetchat/commet/issues/626
-- [ ] Incorporate Linux Flatpak feedback (GHI #632) https://github.com/commetchat/commet/issues/632
+- [x] Incorporate Linux Flatpak feedback (GHI #632) https://github.com/commetchat/commet/issues/632
