--- a/todo.txt
+++ b/todo.txt
@@ -172,4 +172,4 @@ P2 — Accessibility, notifications tuning, and calendar
 ## Calendar (P2)
 - [x] Fix all-day events saved one day off when updating (GHI #633) https://github.com/commetchat/commet/issues/633
 - [ ] Calendar-integrated availability / ready-up system (GHI #626) https://github.com/commetchat/commet/issues/626
-- [x] Incorporate Linux Flatpak feedback (GHI #632) https://github.com/commetchat/commet/issues/632
+- [ ] Incorporate Linux Flatpak feedback (GHI #632) https://github.com/commetchat/commet/issues/632
