Add Debian arm64 release packaging matrix

--- a/todo.txt
+++ b/todo.txt
@@ -148,7 +148,7 @@ P1/P2 — Platform support, packaging, and distribution
 - [x] Trouble installing .deb on KDE Ubuntu (GHI #684) https://github.com/commetchat/commet/issues/684
 - [x] Fix .deb landing in filesystem root (GHI #575) https://github.com/commetchat/commet/issues/575
 - [ ] Request AUR package (GHI #357) https://github.com/commetchat/commet/issues/357
-- [ ] Debian ARM64 support (GHI #371) https://github.com/commetchat/commet/issues/371
+- [x] Debian ARM64 support (GHI #371) https://github.com/commetchat/commet/issues/371
 - [ ] Add to F-Droid (GHI #115) https://github.com/commetchat/commet/issues/115
 - [x] Docker image for web client container story (GHI #635) https://github.com/commetchat/commet/issues/635
 
