--- a/todo.txt
+++ b/todo.txt
@@ -22,7 +22,7 @@ P0 — Data safety, encryption, and “don’t brick the app”
 - [ ] Fix “New login session verification not working” (GHI #668) https://github.com/commetchat/commet/issues/668
 - [x] Fix verification prompt not showing on first session after login (GHI #692) https://github.com/commetchat/commet/issues/692
 - [ ] Fix “Confirm session key button not working [WINDOWS ONLY]” (GHI #675) https://github.com/commetchat/commet/issues/675
-- [ ] Fix crash: beginVerification null check operator (GHI #680) https://github.com/commetchat/commet/issues/680
+- [x] Fix crash: beginVerification null check operator (GHI #680) https://github.com/commetchat/commet/issues/680
 - [ ] Fix “Unable to verify sessions from Android only” (GHI #380) https://github.com/commetchat/commet/issues/380
 - [ ] Add clear UX feedback for unverified sessions (GHI #101) https://github.com/commetchat/commet/issues/101
 - [ ] Add manual key import/export (GHI #631) https://github.com/commetchat/commet/issues/631
