Add restricted room visibility mapping support

--- a/todo.txt
+++ b/todo.txt
@@ -107,6 +107,8 @@ P1 — Spaces/servers, permissions, and moderation (DP)
 - [x] Fix newly created spaces named “Empty Chat” with no topic (GHI #664) https://github.com/commetchat/commet/issues/664
 - [x] Fix misleading space notifications option (GHI #678) https://github.com/commetchat/commet/issues/678
 - [ ] Restricted room support (GHI #627) https://github.com/commetchat/commet/issues/627
+  - [x] Add restricted-visibility mapping for joined rooms/spaces and room previews (visibility + lock icon handling)
+  - [ ] Deferred: room creation/join-rule editing flow for restricted rooms
 
 ## DP gaps (create issues)
 - [ ] (NEW / DP) Roles/permissions UI comparable to Discord roles/channel perms
