--- a/todo.txt
+++ b/todo.txt
@@ -174,7 +174,8 @@ P2 — Accessibility, notifications tuning, and calendar
 ## Calendar (P2)
 - [x] Fix all-day events saved one day off when updating (GHI #633) https://github.com/commetchat/commet/issues/633
 - [ ] Calendar-integrated availability / ready-up system (GHI #626) https://github.com/commetchat/commet/issues/626
-- [ ] Incorporate Linux Flatpak feedback (GHI #632) https://github.com/commetchat/commet/issues/632
+- [x] Incorporate Linux Flatpak feedback (GHI #632) https://github.com/commetchat/commet/issues/632
   - [x] Allow dismissing image lightbox with Escape
   - [x] Add left/right arrow navigation when viewing images
   - [x] Investigate and fix reported device-verification UX gaps on Linux/Flatpak (added robust retry for verification/auth dialog display when navigator context is not ready)
+  - [x] Reduce oversized space avatars in side navigation for better scaling on Linux/Flatpak
