--- a/todo.txt
+++ b/todo.txt
@@ -108,7 +108,7 @@ P1 — Spaces/servers, permissions, and moderation (DP)
 - [x] Fix misleading space notifications option (GHI #678) https://github.com/commetchat/commet/issues/678
 - [ ] Restricted room support (GHI #627) https://github.com/commetchat/commet/issues/627
   - [x] Add restricted-visibility mapping for joined rooms/spaces and room previews (visibility + lock icon handling)
-  - [ ] Deferred: room creation/join-rule editing flow for restricted rooms
+  - [x] Add room creation flow for restricted rooms (join-rule editing UI still deferred)
 
 ## DP gaps (create issues)
 - [ ] (NEW / DP) Roles/permissions UI comparable to Discord roles/channel perms
