--- a/todo.txt
+++ b/todo.txt
@@ -156,7 +156,7 @@ P1/P2 — Platform support, packaging, and distribution
 
 ## Desktop QoL (P2)
 - [x] Change language on desktop client (GHI #641) https://github.com/commetchat/commet/issues/641
-- [ ] Minimize to tray (GHI #72) https://github.com/commetchat/commet/issues/72
+- [x] Minimize to tray (GHI #72) https://github.com/commetchat/commet/issues/72
 - [x] Use native titlebar on Linux (GHI #392) https://github.com/commetchat/commet/issues/392
 - [x] Store logs to file (GHI #389) https://github.com/commetchat/commet/issues/389
 - [x] PWA icon dark variant (Chromebooks) (GHI #398) https://github.com/commetchat/commet/issues/398
