--- a/todo.txt
+++ b/todo.txt
@@ -18,6 +18,7 @@ P0 — Data safety, encryption, and “don’t brick the app”
 - [ ] Fix encrypted threads failing to decrypt (GHI #690) https://github.com/commetchat/commet/issues/690
   - [x] Add robust retry + fallback for thread event decryption
   - [x] Improve diagnostics (surface which session/key is missing)
+  - [x] Fix thread timeline event update/removal edge cases that could break threaded timeline rendering
 - [ ] Fix “can’t see encrypted message that can be seen on other apps” (GHI #388) https://github.com/commetchat/commet/issues/388
 - [ ] Fix “New login session verification not working” (GHI #668) https://github.com/commetchat/commet/issues/668
 - [x] Fix verification prompt not showing on first session after login (GHI #692) https://github.com/commetchat/commet/issues/692
