--- a/todo.txt
+++ b/todo.txt
@@ -54,6 +54,7 @@ P1 — Calls, streaming, and Discord-level real-time features
 
 ## Calls / voice / SS (P1, some P0)
 - [ ] Fix app freeze when first enabling webcam (GHI #670) https://github.com/commetchat/commet/issues/670
+  - [x] Prevent duplicate camera/screenshare toggle actions in call UI and surface recoverable errors to users
 - [x] Fix voice channel default permissions (“moderator only” bug) (GHI #628) https://github.com/commetchat/commet/issues/628
 - [ ] Implement/track Element Call integration (GHI #450) https://github.com/commetchat/commet/issues/450
   - [ ] Use it as the path to reliable group calls + better SS + scalability
